@@ -1,3 +1,7 @@
+Sep  5 2000 -   2.5 released.
+
+Sep  4 2000 -   Added the PythonCleanupHandler.
+
 Sep  4 2000 -   Added req.register_cleanup(). Still need server.register_cleanup(),
 		as well as a PythonCleanupHandler.
 
